src/index.css
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

/* Navbar.css  */
.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px;
  background-color: #4f5d4f;
  border-bottom: 1px solid #ddd;
  height: 60px;
}

.navbar img {
  height: 3.1cm;
  max-width: 207px;
  object-fit: contain;

}

.burger-menu {
  font-size: 24px;
  cursor: pointer;
  display: none; /* Hide burger menu on larger screens */
}

.nav-links {
  display: flex;
  gap: 20px; /* Add spacing between links */
  margin-right: 20px; /* Add margin to the right */
}

.nav-links a {
  color: #ffd700; 
  text-decoration: none;
  font-family: 'Poppins', sans-serif;
  font-weight: 600;
}

.nav-links.open {
  display: block;
}

@media (max-width: 600px) {
  .burger-menu {
    display: block; /* Show burger menu on smaller screens */
  }

  .nav-links {
    display: none;
    flex-direction: column;
    gap: 10px;
    position: absolute;
    top: 60px; /* Adjust top position to be below the navbar */
    right: 20px;
    background-color: #4f5d4f;
    padding: 10px;
    border-radius: 5px;
  }

  .nav-links.open {
    display: flex;
  }

  .nav-links a {
    color: yellow; /* Ensure font color is yellow on smaller screens */
  }
}


.slider-container {
  width: 100%;
  height: auto;
  overflow: hidden;
  position: relative;
  margin: 0;
  
}

.slider {
  display: flex;
  transition: transform 0.5s ease-in-out;
 
  
}

.slider img {
  width: 100%;
  height: auto;
  flex: 1 0 100%;
  object-fit: cover;
}

button.prev, button.next {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  background-color: rgba(0, 0, 0, 0.5);
  color: white;
  border: none;
  padding: 10px;
  cursor: pointer;
  z-index: 1;
}

button.prev {
  left: 10px;
}

button.next {
  right: 10px;
}

.about-container {
  font-family: 'Poppins', sans-serif;
  padding: 20px;
  margin: 10px 10px 10px 10px;
}

.get-estimate-btn {
  font-family: 'Poppins', sans-serif;
  font-weight: 600;
  background-color: white;
  color:  #4f5d4f;
  border: 2px solid #4f5d4f;
  padding: 10px 20px;
  cursor: pointer;
  height: 1.5cm; /* Ensure the button is at least 2 cm high */
  font-size: 16px;
  border-radius: 10px;
  transition: background-color 0.3s ease;
  margin: 0px 20px 25px 20px;
}

.get-estimate-btn:hover {
  background-color: white;
}


/* Responsive styles */
@media (max-width: 600px) {
  .get-estimate-btn {
    width: 50%; 
    max-width: 250px;
    padding: 15px; /* Increase padding for better touch targets */
    font-size: 18px; /* Increase font size for readability */
  }
}

